--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <meta property="og:title" content="This is DEXV!!!"/>
         <meta property="og:type" content="website"/>
         <meta property="og:description" content="My socials"/>
-        <meta property="og:image" content="https://dexv.site/content/cdn/UvHSLHBepAwR.png"/>
+        <meta property="og:image" content="https://media.discordapp.net/attachments/1262355583437242409/1268992235400200306/image.jpg?ex=66ae709d&is=66ad1f1d&hm=18d946d06d9023a0a21c61c66b15fd0585686a62aaad18e3d2020de146895719&=&format=webp&width=810&height=608"/>
         <meta property="og:image:type" content="image/png"/>
         <meta property="og:image:width" content="1426"/>
         <meta property="og:image:height" content="642"/>
-        <meta property="og:url" content="https://dexv.lol"/>
+        <meta property="og:url" content="https://dexv.xyz"/>
         <meta property="twitter:card" content="summary_large_image"/>
         <link rel="canonical" href="https://dexv.lol"/>
         <link href="https://fonts.googleapis.com/css2?display=swap&family=Inter:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Golos+Text:ital,wght@0,500;0,700;1,500;1,700&family=Plus+Jakarta+Sans:ital,wght@0,500;0,700;1,500;1,700" rel="stylesheet" type="text/css"/>
