--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <meta property="og:image:height" content="642"/>
         <meta property="og:url" content="https://dexv.xyz"/>
         <meta property="twitter:card" content="summary_large_image"/>
-        <link rel="canonical" href="https://dexv.lol"/>
+        <link rel="canonical" href="https://dexv.xyz"/>
+        <link rel="icon" href="/assets/images/webico.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?display=swap&family=Inter:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Golos+Text:ital,wght@0,500;0,700;1,500;1,700&family=Plus+Jakarta+Sans:ital,wght@0,500;0,700;1,500;1,700" rel="stylesheet" type="text/css"/>
         <style>
             html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
