--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>wow big daddy dexv</title>
-        <link rel="icon" href="icon.png" type="image/x-icon">
+        <link rel="icon" href="/assets/images/webico.ico" type="image/x-icon">
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="color-scheme" content="light only"/>
