--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 transform: scale(1);
                 width: 100vw;
                 z-index: 0;
-                background-image: linear-gradient(136deg, #240042 0%, #0C0C0C 50%, #171717 92%);
+                background-image: linear-gradient(136deg, #000000 0%, #444444 50%, #888888 92%);
                 background-position: 0% 0%;
                 background-repeat: repeat;
                 background-size: auto;
@@ -136,7 +136,7 @@
             }
 
             code {
-                background-color: rgba(144,144,144,0.25);
+                background-color: rgba(128, 128, 128, 0.25);
                 border-radius: 0.25em;
                 font-family: 'Lucida Console', 'Courier New', monospace;
                 font-size: 0.9em;
@@ -148,7 +148,7 @@
             }
 
             mark {
-                background-color: rgba(144,144,144,0.25);
+                background-color: rgba(128, 128, 128, 0.25);
             }
 
             spoiler-text {
