--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 transform: scale(1);
                 width: 100vw;
                 z-index: 0;
-                background-image: linear-gradient(136deg, #000000 0%, #444444 50%, #888888 92%);
+                background-image: linear-gradient(136deg, #000000 0%, #1a1a1a 50%, #333333 92%);
                 background-position: 0% 0%;
                 background-repeat: repeat;
                 background-size: auto;
