--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DXVVAY</title>
+    <link rel="icon" href="webico.ico" type="image/icon">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="color-scheme" content="light only"/>
+    <meta name="description" content=":3"/>
+    <meta property="og:site_name" content="Dexv's Site"/>
+    <meta property="og:title" content="Dex Likes kids"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="NlGGA"/>
+    <meta property="og:image:type" content="image/png"/>
+    <meta property="og:image:width" content="1426"/>
+    <meta property="og:image:height" content="642"/>
     <link rel="stylesheet" href="style.css">
 </head>
 
